--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
-    "autoload": {
-       "psr-4": {
-          "App\\": "src/App"
-       }
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/App"
     }
- }
+  },
+  "require": {
+    "twbs/bootstrap": "4.0.0"
+  }
+}
